<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vNotificationScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_to_rename"
    android:baselineAligned="false"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivNotificationScreenClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_snackbar_close"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        />

    <ImageView
        android:id="@+id/ivNotificationScreenImage"
        android:layout_width="@dimen/onboarding_image_size"
        android:layout_height="@dimen/onboarding_image_size"
        android:layout_marginHorizontal="@dimen/margin_large"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/error_screen_image_top_margin"
        android:src="@drawable/img_no_internet" />

    <TextView
        android:id="@+id/tvNotificationScreenTitle"
        style="@style/ErrorScreen.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/error_screen_horizontal_margin"
        tools:text="@string/error_screen_no_internet_title" />

    <TextView
        android:id="@+id/tvNotificationScreenDescription"
        style="@style/ErrorScreen.Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/error_screen_horizontal_margin"
        tools:text="@string/error_screen_no_internet_description" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btnNotificationScreenAction"
        style="@style/ErrorScreen.Button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/error_screen_height_button"
        android:background="@drawable/bg_white_rounded_button"
        android:paddingHorizontal="32dp"
        android:text="@string/error_screen_button_text" />

</LinearLayout>