<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/flRateAppContentView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_large">

        <ImageView
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/ic_bottomsheet"
            app:tint="@color/bottomsheet_close_button" />

        <ImageView
            android:id="@+id/star_1"
            style="@style/RateAppStar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/star_2"
            app:layout_constraintTop_toBottomOf="@+id/close_button"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            android:layout_marginTop="@dimen/margin_big"
            android:layout_marginLeft="@dimen/margin_big"/>

        <ImageView
            android:id="@+id/star_2"
            style="@style/RateAppStar"
            app:layout_constraintLeft_toRightOf="@+id/star_1"
            app:layout_constraintRight_toLeftOf="@+id/star_3"
            app:layout_constraintTop_toTopOf="@+id/star_1"/>

        <ImageView
            android:id="@+id/star_3"
            style="@style/RateAppStar"
            app:layout_constraintLeft_toRightOf="@+id/star_2"
            app:layout_constraintRight_toLeftOf="@+id/star_4"
            app:layout_constraintTop_toTopOf="@+id/star_1"/>

        <ImageView
            android:id="@+id/star_4"
            style="@style/RateAppStar"
            app:layout_constraintLeft_toRightOf="@+id/star_3"
            app:layout_constraintRight_toLeftOf="@+id/star_5"
            app:layout_constraintTop_toTopOf="@+id/star_1"/>

        <ImageView
            android:id="@+id/star_5"
            style="@style/RateAppStar"
            app:layout_constraintLeft_toRightOf="@+id/star_4"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/star_1"
            android:layout_marginRight="@dimen/margin_big"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/star_1"
            android:layout_marginTop="@dimen/margin_big"
            android:layout_marginLeft="@dimen/margin_common"
            android:layout_marginRight="@dimen/margin_common"
            android:gravity="center"
            android:textAppearance="@style/H2"
            android:textColor="@color/rate_app_title"
            android:text="@string/rate_app_empty_title" />

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/title"
            android:layout_marginTop="@dimen/margin_common"
            android:layout_marginLeft="@dimen/margin_common"
            android:layout_marginRight="@dimen/margin_common"
            android:gravity="center"
            android:textAppearance="@style/TextNormal"
            android:textColor="@color/black"
            android:text="@string/rate_app_empty_text"/>

        <TextView
            android:id="@+id/btn"
            style="@style/BigButton.Black"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/text"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/margin_big"
            android:layout_marginLeft="@dimen/margin_common"
            android:layout_marginRight="@dimen/margin_common"
            android:text="@string/rate_app_empty_button"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/vError"
        layout="@layout/view_notification"
        android:visibility="gone"
        />

</FrameLayout>